--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,19 @@
+:root{
+  --color1: #EE4540;
+  --color2: #C72C41;
+  --color3: #801336;
+  --color4: #510A32;
+  --color5: #2D142C;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
+
+/*------------------------ Cargar Style ------------------------*/
 .cardB{
     margin: 20px;
 }
@@ -16,3 +26,71 @@
     width: 18rem;
   }
 
+/*------------------------ Contacto Style ------------------------*/
+
+
+/*------------------------ Nosotros Style ------------------------*/
+
+#about-body{
+  background-color: white;
+  color: black;
+  font-family: 'Montserrat', sans-serif;
+}
+
+#about-body span{
+  font-weight: bold;
+}
+
+.about-section{
+  margin-top: 30px;
+}
+
+.about-section .carousel-control-prev-icon {
+  width: 40px;
+  height: 40px;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+}
+
+.about-section .carousel-control-next-icon {
+  width: 40px;
+  height: 40px;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+}
+
+.img-about{
+  object-fit: cover;
+  width: 100%;
+  height: 100vh;
+}
+
+.about-overlay{
+  display: block;
+  position: absolute;
+  font-family: 'Poiret One', sans-serif;
+  font-size: 70px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  color:white;
+  z-index: 4;
+} 
+
+.about-hr{
+  height: 1px;
+  width: 30%;
+  background-color: #ccc;
+  border: none;
+}
+
+.img-avatar{
+  object-fit: cover;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  border: 3px solid var(--color5);
+}
+
+.about-info h3{
+  color: var(--color5);
+}
