--- a/css/login.css
+++ b/css/login.css
@@ -36,6 +36,7 @@ border-radius: 25px;
 margin-top: 30px;
 transition-property: background-color;
  transition-duration: 0.5s;
+ margin-bottom: 10px;
 }
 #btnSubmit:hover{
     background-color: rgb(167, 20, 103);
@@ -92,8 +93,12 @@ transition-property: font-size;
     padding-top: 5px;
     background-color: #510a32ad;
     border-radius: 30px;
+    
 }
+
 /* Estilo header */
+
+
 #gaHeader{
     font-family: 'Roboto Mono', monospace;
     width: 100vw;
@@ -104,14 +109,19 @@ transition-property: font-size;
     transition: background-color 500ms, color 500ms;
     
 }
+#gaNavbar{
+    height: 10vh !important;
+}
 #gaColBtn{
     color: white;
 }
-.collapse .show #gaLista {
-    background-color: #510a328e;
+.collapse  #gaNavCol,
+#gaLista {
+    background-color: #510a32bd ;
     text-align: center;
     padding-right: 15px;
     padding-bottom: 15px;
+    width: 100vw;
   }
 
 
@@ -130,6 +140,7 @@ background-color: var(--color4);
     border: 1px solid var(--color5);
     transition-property: transform;
     transition-duration: 0.5s;
+  
     
 }
 #susBtn:hover{
@@ -147,7 +158,7 @@ background-color: var(--color4);
     margin: 0;
     padding: 0;
     margin-top: 0;
-    height: 10vh;
+    height: 20vh;
     background-color: transparent;
     
 }
