--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
   --color3: #801336;
   --color4: #510A32;
   --color5: #2D142C;
-  --gradient: linear-gradient(to right top, #ee4540, #c12c4e, #8e224e, #5b1d43, #2d142c);
 }
 
 /* background-image: linear-gradient(to right top, #ee4540, #c12c4e, #8e224e, #5b1d43, #2d142c); */
@@ -17,7 +16,7 @@
 }
 
 /*------------------------ Cargar Style ------------------------*/
-.cardB{
+/* .cardB{
     margin: 20px;
 }
 
@@ -27,7 +26,7 @@
   
   .card_avatar {
     width: 18rem;
-  }
+  } */
 
 /*------------------------ Contacto Style ------------------------*/
 
@@ -46,18 +45,6 @@
 
 .about-section{
   margin-top: 30px;
-}
-
-.about-section .carousel-control-prev-icon {
-  width: 40px;
-  height: 40px;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
-}
-
-.about-section .carousel-control-next-icon {
-  width: 40px;
-  height: 40px;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
 }
 
 .img-about{
@@ -81,7 +68,7 @@
 
 .about-hr{
   height: 1px;
-  width: 30%;
+  /* width: 30%; */
   background-color: #ccc;
   border: none;
 }
@@ -106,13 +93,9 @@
   font-family: 'Poppins', sans-serif;
 }
 
-::selection{
-  color: #fff;
-  background: #1cc7d0;
-}
 .wrapper{
-  height: 300px;
-  width: 220px;
+  height: 280px;
+  width: 200px;
   position: relative;
   transform-style: preserve-3d;
  perspective: 1000px;
@@ -150,8 +133,8 @@
   transform: rotateY(0deg);
 }
 .wrapper .back-face img{
-  height: 100px;
-  width: 100px;
+  height: 80px;
+  width: 80px;
   padding: 5px;
   border-radius: 50%;
   background: linear-gradient(to right top, #ee4540, #c12c4e, #8e224e, #5b1d43, #2d142c);
