--- a/css/home.css
+++ b/css/home.css
@@ -17,6 +17,7 @@ background-size: cover;
 background-repeat: no-repeat;
 }
 
+
 .libro-img-home {
 
 margin-top: 30px;
@@ -36,6 +37,7 @@ object-fit: cover;
 .destacados-home{
 font-family: 'Montserrat', sans-serif;
 color: whitesmoke;
+margin-top: 5vh;
 }
 
 .Libro-home {
